--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ minecraft {
 
     // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
 
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
     runs {
